# setup_files

./: CMakeLists.txt  package.xml
files/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
files/lib/pkgconfig/: catkin_tools_prebuild.pc
files/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig.cmake
